# ordo

./: .gitignore  README.md  app.py  main.py  ordo.py  pyproject.toml  requirements.txt  setup.py
ordo/: __init__.py
ordo/cli/: main.py
ordo/core/: config.py  metadata.py  models.py  patterns.py
ordo/services/: discovery.py  enhanced_file_operations.py  file_operations.py  organization.py
ordo/ui/: prompts.py
ordo/utils/: __init__.py
tests/: test_discovery.py  test_enhanced_file_operations.py  test_file_operations.py  test_metadata.py  test_patterns.py
